--- a/Js/style.css
+++ b/Js/style.css
@@ -30,3 +30,31 @@ span {
   font-size: 0.9em;
   margin-left: 10px;
 }
+
+label {
+  display: block;
+  margin-bottom: 2px;
+  font-weight: bold;
+}
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="tel"] {
+  width: 40%;
+  padding: 2px;
+  margin: 5px 0 5px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+input[type="submit"] {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
+}
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
